# rpi-pico-light-controller

./: .gitignore  CMakeLists.txt  README.md  api.py  index.html  listener.py  makefile  script.js  style.css  template.html  test.py  test_serial.py
api/: main.py
blink/: CMakeLists.txt  blink.c
micro/: CMakeLists.txt  micro.c
websocket/: listener.py
